--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
